--- a/src/styles.css
+++ b/src/styles.css
@@ -1,129 +1,171 @@
+:root {
+  --color-fondo: #f1e0d9;
+  /* Fondo principal */
+  --color-titulo: #c23071;
+  /* Texto Titulo */
+  --color-texto1: #bb1662;
+  /* Texto general */
+}
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  color: var(--color-texto1);
+  font-family: "roboto", sans-serif;
+  font-family: sans-serif;
 }
 
-#root{
-    height: 100%;
-    display: initial;
+html {
+  background: rgb(241, 224, 217);
+  background: linear-gradient(
+    90deg,
+    rgba(241, 224, 217, 1) 15%,
+    rgba(227, 170, 185, 1) 39%,
+    rgba(241, 224, 217, 1) 58%,
+    rgba(227, 170, 185, 1) 79%
+  );
 }
 
-/*--NAVBAR---*/
+#root {
+  height: 100%;
+  display: initial;
+}
+
+/*--NAVBAR--*/
+
+nav {
+  background-color: #9a5c75;
+  box-shadow: 0px 5px 10px 0px #919191;
+  width: 100%;
+  opacity: 0.95;
+  z-index: 999;
+  position: fixed;
+}
+
 .nav-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 2rem;
-    background-color: rgb(172, 159, 142);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  /* padding: 1rem; */
 }
 
 .navbar-logo {
-    display: flex;
-    align-items: center;
-    color: white;
+  display: flex;
+  align-items: center;
+  color: white;
+}
+
+.navbar-text {
+  font-size: 1.5rem;
+  margin-left: 1rem;
+  color: rgb(255, 255, 255);
 }
 
 .navbar-img {
-    max-width: 5rem;
+  max-width: 6rem;
 }
 
 .nav-list {
-    list-style-type: none;
-    display: flex;
-    gap: 1rem;
+  margin-right: 1.5rem;
+  list-style-type: none;
+  display: flex;
+  gap: 2.5rem;
 }
 
 .nav-links a {
-    text-decoration: none;
-    color: aqua;
+  text-decoration: none;
+  color: white;
+  display: inline-block;
+}
+
+.nav-links a:hover {
+  color: #490726;
 }
 
 .nav_hamburguer {
-    display: none;
+  display: none;
 }
 
 .nav_close {
-    display: none;
+  display: none;
 }
+
+/*---INICIO---*/
 
 /*-- SECCION DE INFO CARTAS---*/
-section{
-    height: 100vh;
+section {
+  height: 100vh;
 }
- .containerInfo{
-    width: 100%;
-    height: 80vh;
-    padding: 6rem 0;
-    background-color: antiquewhite;
- }
-.imgInfo{
-    height: auto;
-    width: 10rem;
+.containerInfo {
+  width: 100%;
+  height: 80vh;
+  padding: 6rem 0;
+  background-color: antiquewhite;
 }
-.container-text{
-    width: 34rem;
+.imgInfo {
+  height: auto;
+  width: 10rem;
 }
-.mainInfoCard{
-    width: 70rem;
-    max-width: 95%;
-    margin: 0 auto;
+.container-text {
+  width: 34rem;
+}
+.mainInfoCard {
+  width: 70rem;
+  max-width: 95%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.nameCard {
+  color: rgb(33, 39, 39);
+  text-transform: uppercase;
+  margin-bottom: 1rem;
+}
+.description {
+  font-size: 1rem;
+}
+@media screen and (max-width: 700px) {
+  /*--NAVBAR---*/
+  .nav_hamburguer,
+  .nav_close {
+    display: block;
+  }
+
+  .navbar-logo {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-}
-.nameCard{
-    color: rgb(33, 39, 39);
-    text-transform: uppercase;
-    margin-bottom: 1rem ;
-}
-.description{
-    font-size: 1rem;
-}
-@media screen and (max-width:700px) {
+    justify-content: center;
+    gap: 2rem;
+  }
 
-    /*--NAVBAR---*/
-    .nav_hamburguer,
-    .nav_close {
-        display: block;
-    }
+  .navbar-icon-menu {
+    opacity: 0;
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 1rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(13, 17, 17);
+    padding: 2rem;
+    box-shadow: 0 0 0 100vmax rgb(0, 0, 0, 0.5);
+  }
 
-    .navbar-logo {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 2rem;
-    }
+  .nav.visible {
+    opacity: 1;
+    visibility: visible;
+  }
 
-    .navbar-icon-menu {
-        opacity: 0;
-        visibility: hidden;
-        display: flex;
-        flex-direction: column;
-        align-items: end;
-        gap: 1rem;
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        background-color: rgb(13, 17, 17);
-        padding: 2rem;
-        box-shadow: 0 0 0 100vmax rgb(0, 0, 0, .5);
+  .nav-list {
+    flex-direction: column;
+    align-items: end;
+  }
 
-    }
-
-    .nav.visible {
-        opacity: 1;
-        visibility: visible;
-    }
-
-    .nav-list {
-        flex-direction: column;
-        align-items: end;
-    }
-
-    .nav-list a {
-        color: aliceblue;
-    }
+  .nav-list a {
+    color: aliceblue;
+  }
 }
