--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 :root {
   --color-fondo: #f1e0d9;
   /* Fondo principal */
@@ -11,19 +13,18 @@
   margin: 0;
   padding: 0;
   color: var(--color-texto1);
-  font-family: "roboto", sans-serif;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
+
+
 }
 
 html {
   background: rgb(241, 224, 217);
-  background: linear-gradient(
-    90deg,
-    rgba(241, 224, 217, 1) 15%,
-    rgba(227, 170, 185, 1) 39%,
-    rgba(241, 224, 217, 1) 58%,
-    rgba(227, 170, 185, 1) 79%
-  );
+  background: linear-gradient(90deg,
+      rgba(241, 224, 217, 1) 15%,
+      rgba(227, 170, 185, 1) 39%,
+      rgba(241, 224, 217, 1) 58%,
+      rgba(227, 170, 185, 1) 79%);
 }
 
 #root {
@@ -39,10 +40,11 @@ nav {
   width: 100%;
   opacity: 0.95;
   z-index: 999;
-  position: fixed;
+  position: static;
+  /* fixed para desplazar */
 }
 
-.nav-container {
+.navContainer {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -62,20 +64,22 @@ nav {
 }
 
 .navbar-img {
+  margin: 5% 0;
   max-width: 6rem;
 }
 
 .nav-list {
-  margin-right: 1.5rem;
   list-style-type: none;
   display: flex;
   gap: 2.5rem;
+  align-items: center;
 }
 
 .nav-links a {
   text-decoration: none;
   color: white;
   display: inline-block;
+  font-size: 1rem;
 }
 
 .nav-links a:hover {
@@ -90,25 +94,221 @@ nav {
   display: none;
 }
 
-/*---INICIO---*/
+.navBtn {
+  padding: 0.5rem 2rem;
+  font-size: 1rem;
+  color: #bb1662;
+  background-color: snow;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  border: none;
+  font-weight: 500;
+  transition: all .5s ease-in-out;
 
-/*-- SECCION DE INFO CARTAS---*/
+}
+
+.navBtn:hover {
+  font-weight: 500;
+  background-color: #c23071;
+  color: snow;
+}
+
+
+/*----------- HOME---------- */
+.contentHome {
+  width: 100%;
+  max-width: 70rem;
+  margin: 0 auto;
+  padding: 0 2rem;
+}
+
+.inicioContainer {
+  padding: 5% 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5rem;
+  text-align: justify;
+  line-height: 2.5rem;
+}
+
+.sakuraImg {
+  width: 100%;
+  max-width: 80%;
+  height: auto;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.title {
+  font-size: 3rem;
+  line-height: normal;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 8px;
+  text-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+/*-- filtros--*/
+.button-common { /* propiedades de btn comunes*/
+  text-transform: uppercase;
+  font-weight: 500;
+  border: none;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+  cursor: pointer;
+}
+.cartasClow {
+  margin-top: 5%;
+  margin-bottom: 5%;
+  text-align: end;
+}
+
+select[data-testid="select-filter"],
+#ordenarFilter,
+select[data-testid="select-filter2"],
+select[data-testid="select-estadistic"] {
+  height: 2.5rem;
+  width: 100%;
+  padding: 0 10px;
+
+}
+
+.container-ordenar {
+  text-align: end;
+}
+
+
+#text {
+  width: 100%;
+  text-align: center;
+  margin: auto;
+  padding: 20px 0px;
+}
+
+.reset-btn {
+  width: 100%;
+  margin-bottom: 5%;
+  padding: 1rem 1.5rem;
+  background-color: #c23071;
+  color: snow;
+  transition: all .5s ease-in-out;
+}
+
+.reset-btn:hover {
+  background-color: #b14877;
+  font-weight: 600;
+}
+
+/*-- cartas clow---*/
+.cartasContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-gap: 1.25rem;
+  font-weight: bold;
+}
+
+.card-front {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.cardName {
+  margin: 0;
+  color: rgb(255, 255, 255);
+  margin-top: 10px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+
+.cardDescription {
+  margin: 0;
+  font-weight: 400;
+  color: snow;
+  margin-top: 10px;
+  z-index: 5;
+}
+
+.card-button {
+  margin: 10px;
+  padding: 0.5rem 2rem;
+  background-color: snow;
+  border-radius: 10px;
+  color: #bb1662;
+}
+
+.card-button:hover {
+  background-color: #c23071;
+  color: snow;
+  font-weight: 600;
+  transform: translateY(-2px);
+}
+
+.img-container {
+  margin-left: 0;
+  width: 100%;
+  height: 300px;
+  overflow: hidden;
+  position: relative;
+  border-radius: 10px 10px 0 0;
+}
+
+ul {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  justify-content: center;
+}
+
+.card {
+  width: 100%;
+  max-width: 240px;
+  height: 430px;
+  background-color: #9A5C75;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+
+}
+
+dl {
+  margin: 0;
+  width: 100%;
+  height: 300px;
+  position: relative;
+}
+
+.img-card {
+  position: absolute;
+  width: 100%;
+  height: 160%;
+  border-radius: 10px 10px 0 0;
+}
+
+/*-- SECCION VISTA DE INFO DE CARTAS---*/
 section {
   height: 100vh;
 }
-.containerInfo {
+
+.content {
   width: 100%;
   height: 80vh;
-  padding: 6rem 0;
-  background-color: antiquewhite;
+  background-color: var(--color-fondo);
+  display: flex;
 }
+
 .imgInfo {
   height: auto;
-  width: 10rem;
+  width: 15rem;
+  border-radius: 2rem;
 }
+
 .container-text {
   width: 34rem;
+  text-align: justify;
+  font-weight: 400;
+  line-height: 1.5rem;
 }
+
 .mainInfoCard {
   width: 70rem;
   max-width: 95%;
@@ -117,15 +317,64 @@ section {
   align-items: center;
   justify-content: space-around;
 }
-.nameCard {
-  color: rgb(33, 39, 39);
+
+.name {
+  color: var(--color-titulo);
   text-transform: uppercase;
+  font-size: 2rem;
   margin-bottom: 1rem;
 }
+
 .description {
   font-size: 1rem;
 }
+
+.btnChat {
+  margin-top: 2%;
+  padding: 0.8rem 2rem;
+  border-radius: 0.5rem;
+  background-color: #c23071;
+  color: snow;
+  border: none;
+}
+
+.btnChat:hover {
+  background-color: #992b5c;
+  transform: translateY(-2px);
+}
+
+/*-----------APIKEY ------------------ */
+.apikeyContent {
+  margin-top: 5%;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+#password {
+  width: 25rem;
+  height: 2rem;
+  padding: 0.5rem 1rem;
+  border-radius: 5rem;
+  border: none;
+  font-size: 1rem;
+}
+
+
+
+@media screen and (min-width: 768px) {
+  .inicioContainer {
+    flex-direction: row;
+    /* Volver a la dirección original para pantallas más grandes */
+  }
+}
+
+
 @media screen and (max-width: 700px) {
+
   /*--NAVBAR---*/
   .nav_hamburguer,
   .nav_close {
