--- a/src/styles.css
+++ b/src/styles.css
@@ -20,8 +20,6 @@
   padding: 0;
   color: var(--color-texto1);
   font-family: "Roboto", sans-serif;
-
-
 }
 
 body {
@@ -90,7 +88,6 @@ nav {
   grid-row: 1/2;
 
 }
-
 
 .nav-item {
   list-style: none;
@@ -178,7 +175,6 @@ nav {
 
 .cartasClow {
   margin-top: 5%;
-  margin-bottom: 5%;
   text-align: end;
 }
 
@@ -392,50 +388,16 @@ svg {
   font-size: 1rem;
 }
 
-
-
-@media screen and (min-width: 600px) {
-  body {
-    width: 100%;
-  }
-
-  .inicioContainer {
-    flex-direction: row;
-    /* Volver a la dirección original para pantallas más grandes */
-  }
-
-  .nav {
-    /* contenedor navContainer de todo*/
-    --state-hamburguer: scale(0);
-    --state-menu: translate(0);
-
-  }
-
-  .nav:target {
-    --state-close: scale(0);
-  }
-
-
-
-  .nav-item a {
-    font-size: 1rem;
-  }
-
-  .contentHome {
-    margin-top: 60px;
-    /* Ajusta según la altura de la barra de navegación */
-  }
-}
-
 /*----------------------MODAL ------------- */
 dialog {
   border: none;
   border-radius: 1rem;
-  padding: 2rem;
+  padding-top: 1rem;
   height: 100%;
   max-height: 500px;
   width: 100%;
   max-width: 600px;
+  background-color: #9A5C75;
   box-shadow: 0 0 #0000, 0 0 #0000, 0 25px 50px -12px rgba(0, 0, 0, 0.25);
   position: fixed;
   top: 50%;
@@ -446,7 +408,7 @@ dialog {
 .chat {
   width: 100%;
   height: 100%;
-  background: #F2F5F8;
+  background: #ffffff;
   display: inline-flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -456,54 +418,117 @@ dialog {
 
 .chat-header {
   width: 100%;
-  display: inline-flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 1rem;
-  border-bottom: solid black 1px;
+  height: 6rem;
+  display: flex;
+  background-color: #9A5C75;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  border-bottom: solid rgba(0, 0, 0, 0.3) 2px;
+}
+
+.img-chat {
+  width: 3rem;
+  height: 3rem;
+  position: absolute;
+  left: 2.5rem;
+  object-fit: cover;
+  object-position: center top;
+  border-radius: 50%;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.navClose {
+  position: absolute;
+  left: 90%;
+  top: 8%;
 }
 
 .chat-with,
 .btn-cierre {
-  font-size: 2rem;
+  color: snow;
+  font-size: 1rem;
+  font-weight: 400;
+  margin-left: 6rem;
 }
 
 .chat-history {
-  text-align: left;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  width: 90%;
   height: 100%;
-  background-color: #ffffff;
-  overflow: auto;
+
 }
 
 .chat-message {
-  width: 100%;
-  display: flex;
+  width: 90%;
+  display: inline-flex;
   align-items: center;
-  justify-content: flex-end;
-  
+  justify-content: center;
+  max-width: 1200px;
 }
 
 #message-send {
-  width: 100%;
+  width: 80%;
   height: 4rem;
- 
+  font-size: 1rem;
+  padding: 1rem;
+  border-radius: 2rem;
+  margin-bottom: 1rem;
 }
 
 .containerSend {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 3rem;
   position: absolute;
   border: none;
-  background-color: transparent;
-  
+  right: 6.5rem;
+  bottom: 2.5rem;
+  background-color: rgb(153, 76, 107);
+  width: 3rem;
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+.containerSend:hover {
+  background-color: rgb(114, 55, 78);
 }
 
 .send {
+  width: 2rem;
+  height: 2rem;
+}
 
-  background-color: #bb1662;
-  border-radius: 50%;
-  width: 3rem;
-  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+@media screen and (min-width: 600px) {
+  body {
+    width: 100%;
+  }
 
+  .inicioContainer {
+    flex-direction: row;
+  }
+
+  .nav {
+    --state-hamburguer: scale(0);
+    --state-menu: translate(0);
+
+  }
+
+  .nav:target {
+    --state-close: scale(0);
+  }
+
+  .nav-item a {
+    font-size: 1rem;
+  }
+
+  .contentHome {
+    margin-top: 60px;
+  }
 }
 
 @media screen and (max-width: 600px) {
@@ -526,9 +551,7 @@ dialog {
     transform: var(--state-menu);
     transition: .3s transform;
     grid-auto-flow: row;
-
   }
-
 
   .nav-item a {
     font-size: 1rem;
