avance en vista error y chat grupal

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,6 +5,10 @@
   /* Texto Titulo */
   --color-texto1: #bb1662;
   /* Texto general */
+  --color-fondo2: #632b46;
+  /* fondo2 general */
+  --color-kero: #ff9232;
+  /* color kerberos */
 }
 
 * {
@@ -168,4 +172,138 @@ section {
   .nav-list a {
     color: aliceblue;
   }
+}
+
+/* --FOOTER-- */
+
+footer {
+  /* position: fixed; */
+  bottom: 0;
+  background-color: #855065;
+  box-shadow: 5px 0px 15px 4px #919191;
+  width: 100%;
+  height: 70px;
+  z-index: 0;
+}
+
+.footer-contain {
+  /* display: flex;
+  align-items: center; */
+  padding: 0px;
+  /* min-height: calc(100vh - 70px); */
+}
+
+.footer-title {
+  text-align: center;
+  color: #f1e0d9;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  padding-top: 20px;
+}
+
+/* -- VISTA ERROR -- */
+
+.error-container {
+  /* contenedor ppal */
+  height: 480px;
+  min-height: calc(100vh - 70px);
+}
+
+.error-contain {
+  /* img 404 y texto */
+  text-align: center;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.text-404 {
+  /* solo texto */
+  margin-top: 10px;
+}
+
+.img-404 {
+  filter: drop-shadow(0 0 20px rgb(255, 255, 255));
+  margin-top: 70px;
+  max-width: 500px;
+  height: auto;
+}
+
+.img-error-kero {
+  display: flex;
+  flex-direction: column; /* Cambia la dirección del eje principal a vertical */
+  align-items: center; /* Centra los elementos horizontalmente */
+  justify-content: flex-end; /* Alinea los elementos en la parte inferior del contenedor */
+  max-width: 100%; /* Ajusta el ancho máximo del contenedor */
+  height: 300px; /* Altura deseada para el contenedor */
+  margin-top: -147px;
+}
+
+.kerberos {
+  filter: drop-shadow(0px -30px 30px #ffffff);
+  width: auto; /* Ancho automático para mantener la proporción */
+  height: auto; /* Altura automática para mantener la proporción */
+  max-width: 50%; /* Ajusta el ancho máximo de la imagen */
+  max-height: 60%; /* Ajusta la altura máxima de la imagen */
+  /* align-self: flex-end; */ /* Alinea la imagen en la parte inferior del contenedor */
+}
+
+/* -- VISTA CHAT GRUPAL (cartas clow) -- */
+
+.container-gral-contact {
+  background: #ab7689;
+  width: 40%;
+  min-width: 200px;
+  height: 100vh;
+}
+
+.title-contact {
+  text-align: center;
+  padding-top: 20px;
+  color: #ffffff;
+}
+
+.avatar-container {
+  width: 80px; /* ajusta el tamaño según sea necesario */
+  height: 80px; /* ajusta el tamaño según sea necesario */
+  border-radius: 50%; /* hace que la imagen sea circular */
+  overflow: hidden; /* asegura que la parte fuera del círculo no se muestre */
+  border: 2px solid #ffffff;
+  display: flex;
+}
+
+.img-Avatar {
+  width: 150px;
+  height: 150px;
+}
+
+.contain-card {
+  display: flex;
+  margin: 20px 0 0 20px;
+}
+
+.avatar-name {
+  margin: 20px 0 0 10px;
+}
+
+.name-card {
+  color: #ffffff;
+}
+
+.description-card {
+  color: #ffffff;
+  opacity: 0.7;
+  font-weight: normal;
+}
+
+/* -- VISTA CHAT GRUPAL (Chat grupal) -- */
+
+.chatGrupal-view {
+  /* display: flex; */
+}
+
+.ChatGrupal {
+  /* width: 300px; */
+  background: #855065;
+
+  width: 40%;
+  min-width: 200px;
+  height: 100vh;
 }
