--- a/src/styles.css
+++ b/src/styles.css
@@ -11,13 +11,11 @@
   /* fondo2 general */
   --color-kero: #ff9232;
   /* color kerberos */
-  --color-gradient: linear-gradient(
-    90deg,
-    rgba(241, 224, 217, 1) 15%,
-    rgba(227, 170, 185, 1) 39%,
-    rgba(241, 224, 217, 1) 58%,
-    rgba(227, 170, 185, 1) 79%
-  );
+  --color-gradient: linear-gradient(90deg,
+      rgba(241, 224, 217, 1) 15%,
+      rgba(227, 170, 185, 1) 39%,
+      rgba(241, 224, 217, 1) 58%,
+      rgba(227, 170, 185, 1) 79%);
 }
 
 * {
@@ -311,10 +309,18 @@ dl {
   display: flex;
 }
 
+.containerChat {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10rem;
+ 
+}
+
 .imgInfo {
   height: auto;
   width: 100%;
-  max-width: 15rem;
+  max-width: 10rem;
   border-radius: 2rem;
 }
 
@@ -322,16 +328,24 @@ dl {
   width: 34rem;
   font-weight: 400;
   line-height: 1.5rem;
+  align-items: center;
 }
 
 .mainInfoCard {
-  width: 70rem;
-  max-width: 95%;
-  margin: 0 auto;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  justify-content: space-around;
+  gap: 2rem;
+}
+
+.chatIndContainer {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  max-height: 30rem;
+  max-width: 30rem;
 }
 
 .description {
@@ -365,7 +379,7 @@ svg {
 .apikeyContent {
   margin-top: 10%;
   width: 100%;
-  height: auto;
+  height: 38rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -414,35 +428,31 @@ dialog {
   width: 100%;
   height: 6rem;
   display: flex;
-  background-color: #9a5c75;
+  background-color: #dcb6c6d4;
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  border-bottom: solid rgba(0, 0, 0, 0.3) 2px;
+  border-radius: 1rem 1rem 0 0;
+  border: solid 2px #855065;
 }
 
 .img-chat {
   width: 3rem;
   height: 3rem;
   position: absolute;
-  left: 2.5rem;
   object-fit: cover;
   object-position: center top;
   border-radius: 50%;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    margin-left: 1rem;
 }
 
-.navClose {
-  position: absolute;
-  left: 90%;
-  top: 8%;
-}
 
 .chat-with,
 .btn-cierre {
-  color: snow;
+  color: #855065;
   font-size: 1rem;
-  font-weight: 400;
+  font-weight: 500;
   margin-left: 6rem;
 }
 
@@ -451,16 +461,20 @@ dialog {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  width: 90%;
+  width: 100%;
   height: 100%;
+  background-color: #855065;
+  border-radius: 0 0 1rem 1rem;
+  border: solid 2px #855065;
 }
 
 .chat-message {
-  width: 90%;
+  width: 95%;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   max-width: 1200px;
+  gap: 1rem;
 }
 
 #message-send {
@@ -477,10 +491,8 @@ dialog {
   align-items: center;
   justify-content: center;
   height: 3rem;
-  position: absolute;
   border: none;
-  right: 6.5rem;
-  bottom: 2.5rem;
+  right: 9.5rem;
   background-color: rgb(153, 76, 107);
   width: 3rem;
   border-radius: 50%;
@@ -548,28 +560,54 @@ dialog {
   .nav-item a {
     font-size: 1rem;
   }
-
-  .mainInfoCard {
+  .content{
+    height: auto;
+    padding: 2rem;
+    box-sizing: border-box;
+  }
+  .containerChat{
     flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+  }
+
+  .title{
+    text-align: center;
+
   }
 
   .imgInfo {
-    max-width: 9rem;
+    max-width: 100%;
+    height: auto;
+    border-radius: 1rem;
+  }
+
+
+
+  .mainInfoCard {
+    gap: 1rem;
+  }
+
+  .chatIndContainer {
+    width: 100%;
+    height: 20rem;
+  }
+  
+    .imgInfo {
+    max-width: 10rem;
+    height: auto;
     border-radius: 1rem;
   }
 
   .container-text {
-    width: 30rem;
-    line-height: 1.5rem;
+    width: 100%;
+    text-align: center;
   }
 
-  .btnChat {
-    padding: 0.8rem;
-  }
 
   .contentHome,
   .content {
-    padding-top: 20%;
+    padding-top: 30%;
   }
 
   .title .apikeyContent {
@@ -635,21 +673,31 @@ footer {
 
 .img-error-kero {
   display: flex;
-  flex-direction: column; /* Cambia la dirección del eje principal a vertical */
-  align-items: center; /* Centra los elementos horizontalmente */
-  justify-content: flex-end; /* Alinea los elementos en la parte inferior del contenedor */
-  max-width: 100%; /* Ajusta el ancho máximo del contenedor */
-  height: 300px; /* Altura deseada para el contenedor */
+  flex-direction: column;
+  /* Cambia la dirección del eje principal a vertical */
+  align-items: center;
+  /* Centra los elementos horizontalmente */
+  justify-content: flex-end;
+  /* Alinea los elementos en la parte inferior del contenedor */
+  max-width: 100%;
+  /* Ajusta el ancho máximo del contenedor */
+  height: 300px;
+  /* Altura deseada para el contenedor */
   margin-top: -147px;
 }
 
 .kerberos {
   filter: drop-shadow(0px -30px 30px #ffffff);
-  width: auto; /* Ancho automático para mantener la proporción */
-  height: auto; /* Altura automática para mantener la proporción */
-  max-width: 50%; /* Ajusta el ancho máximo de la imagen */
-  max-height: 60%; /* Ajusta la altura máxima de la imagen */
-  /* align-self: flex-end; */ /* Alinea la imagen en la parte inferior del contenedor */
+  width: auto;
+  /* Ancho automático para mantener la proporción */
+  height: auto;
+  /* Altura automática para mantener la proporción */
+  max-width: 50%;
+  /* Ajusta el ancho máximo de la imagen */
+  max-height: 60%;
+  /* Ajusta la altura máxima de la imagen */
+  /* align-self: flex-end; */
+  /* Alinea la imagen en la parte inferior del contenedor */
 }
 
 /* -- VISTA CHAT GRUPAL (cartas clow) -- */
@@ -668,10 +716,14 @@ footer {
 }
 
 .avatar-container {
-  width: 80px; /* ajusta el tamaño según sea necesario */
-  height: 80px; /* ajusta el tamaño según sea necesario */
-  border-radius: 50%; /* hace que la imagen sea circular */
-  overflow: hidden; /* asegura que la parte fuera del círculo no se muestre */
+  width: 80px;
+  /* ajusta el tamaño según sea necesario */
+  height: 80px;
+  /* ajusta el tamaño según sea necesario */
+  border-radius: 50%;
+  /* hace que la imagen sea circular */
+  overflow: hidden;
+  /* asegura que la parte fuera del círculo no se muestre */
   border: 2px solid #ffffff;
   display: flex;
 }
