--- a/src/styles.css
+++ b/src/styles.css
@@ -534,6 +534,11 @@ dialog {
   .contentHome {
     margin-top: 60px;
   }
+  .kerberos{
+    width: 100%;
+    max-width: 42rem;
+  }
+  
 }
 
 @media screen and (max-width: 600px) {
@@ -614,51 +619,43 @@ dialog {
   #password {
     max-width: 20rem;
   }
+  .kerberos, .img-404{
+    width: 95%;
+  }
 }
-
 /* --FOOTER-- */
 
 footer {
-  /* position: fixed; */
-  bottom: 0;
-  background-color: #855065;
-  box-shadow: 5px 0px 15px 4px #919191;
+  background-color: #9a5c75;
   width: 100%;
-  height: 70px;
-  z-index: 0;
+  height: 4rem;
 }
 
-.footer-contain {
-  /* display: flex;
-  align-items: center; */
-  padding: 0px;
-  /* min-height: calc(100vh - 70px); */
-}
 
 .footer-title {
   text-align: center;
   color: #f1e0d9;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   padding-top: 20px;
+  margin-top: 1rem;
 }
 
 /* -- VISTA ERROR -- */
 
 .error-container {
   /* contenedor ppal */
-  height: 480px;
-  min-height: calc(100vh - 70px);
+  max-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
 }
 
-.error-contain {
-  /* img 404 y texto */
-  text-align: center;
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
-}
 
 .text-404 {
   /* solo texto */
-  margin-top: 10px;
+  font-size: 1.5rem;
+  text-transform: lowercase;
+  color: #855065;
 }
 
 .img-404 {
@@ -668,33 +665,11 @@ footer {
   height: auto;
 }
 
-.img-error-kero {
-  display: flex;
-  flex-direction: column;
-  /* Cambia la dirección del eje principal a vertical */
-  align-items: center;
-  /* Centra los elementos horizontalmente */
-  justify-content: flex-end;
-  /* Alinea los elementos en la parte inferior del contenedor */
-  max-width: 100%;
-  /* Ajusta el ancho máximo del contenedor */
-  height: 300px;
-  /* Altura deseada para el contenedor */
-  margin-top: -147px;
-}
 
 .kerberos {
-  filter: drop-shadow(0px -30px 30px #ffffff);
-  width: auto;
-  /* Ancho automático para mantener la proporción */
-  height: auto;
-  /* Altura automática para mantener la proporción */
-  max-width: 50%;
-  /* Ajusta el ancho máximo de la imagen */
-  max-height: 60%;
-  /* Ajusta la altura máxima de la imagen */
-  /* align-self: flex-end; */
-  /* Alinea la imagen en la parte inferior del contenedor */
+  filter: drop-shadow(0px -10px 30px #ffffff);
+
+
 }
 
 /* -- VISTA CHAT GRUPAL (cartas clow) -- */
