--- a/src/styles.css
+++ b/src/styles.css
@@ -11,13 +11,11 @@
   /* fondo2 general */
   --color-kero: #ff9232;
   /* color kerberos */
-  --color-gradient: linear-gradient(
-    90deg,
-    rgba(241, 224, 217, 1) 15%,
-    rgba(227, 170, 185, 1) 39%,
-    rgba(241, 224, 217, 1) 58%,
-    rgba(227, 170, 185, 1) 79%
-  );
+  --color-gradient: linear-gradient(90deg,
+      rgba(241, 224, 217, 1) 15%,
+      rgba(227, 170, 185, 1) 39%,
+      rgba(241, 224, 217, 1) 58%,
+      rgba(227, 170, 185, 1) 79%);
 }
 
 * {
@@ -219,6 +217,7 @@ select[data-testid="select-estadistic"] {
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   grid-gap: 1.25rem;
   font-weight: bold;
+  margin-bottom: 2rem;
 }
 
 .card-front {
@@ -377,14 +376,18 @@ svg {
 }
 
 /*-----------css de view APIKEY ------------------ */
+.apiview {
+  height: 93vh;
+}
+
 .apikeyContent {
-  margin-top: 10%;
   width: 100%;
   height: 38rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 2rem;
+  justify-content: center;
 }
 
 #password {
@@ -435,6 +438,7 @@ dialog {
   justify-content: center;
   border-radius: 1rem 1rem 0 0;
   border: solid 2px #855065;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .img-chat {
@@ -467,6 +471,7 @@ dialog {
   background-color: #855065;
   border-radius: 0 0 1rem 1rem;
   border: solid 2px #855065;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 
 .chat-message {
@@ -534,11 +539,12 @@ dialog {
   .contentHome {
     margin-top: 60px;
   }
-  .kerberos{
+
+  .kerberos {
     width: 100%;
     max-width: 42rem;
   }
-  
+
 }
 
 @media screen and (max-width: 600px) {
@@ -566,11 +572,13 @@ dialog {
   .nav-item a {
     font-size: 1rem;
   }
+
   .content {
     height: auto;
     padding: 2rem;
     box-sizing: border-box;
   }
+
   .containerChat {
     flex-direction: column;
     gap: 1rem;
@@ -619,10 +627,19 @@ dialog {
   #password {
     max-width: 20rem;
   }
-  .kerberos, .img-404{
+
+  .kerberos,
+  .img-404 {
     width: 95%;
+    top: 28.5rem;
   }
+
+  .error-container {
+    padding-top: 10%;
+  }
+
 }
+
 /* --FOOTER-- */
 
 footer {
@@ -636,24 +653,24 @@ footer {
   text-align: center;
   color: #f1e0d9;
   padding-top: 20px;
-  margin-top: 1rem;
+
 }
 
 /* -- VISTA ERROR -- */
 
 .error-container {
   /* contenedor ppal */
-  max-height: 100vh;
+  height: 91vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  gap: 5rem;
 }
 
 
 .text-404 {
   /* solo texto */
-  font-size: 1.5rem;
+  font-size: 2rem;
   text-transform: lowercase;
   color: #855065;
 }
@@ -668,7 +685,10 @@ footer {
 
 .kerberos {
   filter: drop-shadow(0px -10px 30px #ffffff);
-
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
 
 }
 
@@ -698,21 +718,11 @@ footer {
   margin-left: 20px;
 }
 
-/* .title-contact {
-  text-align: center;
-  padding-top: 20px;
-  color: #ffffff;
-} */
-
 .avatar-container {
   width: 80px;
-  /* ajusta el tamaño según sea necesario */
   height: 80px;
-  /* ajusta el tamaño según sea necesario */
   border-radius: 50%;
-  /* hace que la imagen sea circular */
   overflow: hidden;
-  /* asegura que la parte fuera del círculo no se muestre */
   border: 2px solid #ffffff;
   display: flex;
 }
@@ -749,9 +759,4 @@ footer {
   min-width: 200px;
   height: 100vh;
   width: 100vh;
-}
-
-.nav-chatGrupal {
-  /* display: flex;
-  justify-content: center; */
 }
