--- a/src/styles.css
+++ b/src/styles.css
@@ -485,6 +485,7 @@ dialog {
   padding: 1rem;
   border-radius: 2rem;
   margin-bottom: 1rem;
+  box-shadow: 1px 0px 8px 5px rgba(0, 0, 0, 0.1);
 }
 
 .containerSend {
@@ -699,37 +700,46 @@ footer {
 
 /* -- VISTA CHAT GRUPAL (cartas clow) -- */
 
-.view-ChGr {
+.viewChatGrupal {
   display: flex;
-  margin-top: 0;
-  width: 100vh;
+  height: 100vh;
+  background-color: var(--color-fondo);
+  justify-content: space-between;
 }
 
-.chatGrupal-view {
+.list-ChGr {
+  background-color: #ab7689;
+  width: 30rem;
   display: flex;
-  justify-content: flex-start;
+  flex-direction: column;
+  box-shadow: 0px 4px 12px 6px rgba(0, 0, 0, 0.1);
 }
 
-.container-gral-contact {
+.list-contact-ChGr {
+  /* background-color: #ab7689; */
+  /*  width: 30rem; */
   display: flex;
-  background: #ab7689;
-  min-width: 100vh;
-  justify-content: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
+  overflow-y: auto;
+}
+
+.title-contact {
+  color: #ffffff;
+  text-align: center;
+  margin: 18px 0 18px 0;
+}
+
+.img-icono {
+  display: none;
 }
 
 .container-contact {
-  display: flex;
-  justify-content: flex-start;
   margin-left: 20px;
 }
 
-/* .title-contact {
-  text-align: center;
-  padding-top: 20px;
-  color: #ffffff;
-} */
-
 .avatar-container {
+  display: flex;
   width: 80px;
   /* ajusta el tamaño según sea necesario */
   height: 80px;
@@ -738,13 +748,13 @@ footer {
   /* hace que la imagen sea circular */
   overflow: hidden;
   /* asegura que la parte fuera del círculo no se muestre */
-  border: 2px solid #ffffff;
-  display: flex;
+  border: 1px solid #ffffff;
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.5);
 }
 
 .img-Avatar {
-  width: 150px;
-  height: 150px;
+  width: 100%;
+  height: 175px;
 }
 
 .contain-card {
@@ -754,6 +764,7 @@ footer {
 
 .avatar-name {
   margin: 20px 0 0 10px;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
 
 .name-card {
@@ -766,17 +777,102 @@ footer {
   font-weight: normal;
 }
 
+/* .nav-icon {
+  margin: -20px 0px 20px 35px;
+  width: 20px;
+} */
+
+@media (max-width: 400px) {
+  .avatar-container {
+    width: 60px; /* Reduzco el tamaño del contenedor de la imagen */
+    height: 60px;
+  }
+
+  .avatar-name {
+    margin-top: 5px; /* Reduzco el espacio entre la imagen y el nombre */
+    font-size: 12px; /* Reduzco el tamaño del texto */
+  }
+
+  .description-card {
+    display: none;
+  }
+
+  .contain-card {
+    /* display: flex; */
+    text-align: center;
+    margin: 5px 0 0 0;
+    flex-direction: column;
+  }
+
+  .list-ChGr {
+    width: 6rem;
+  }
+
+  .list-contact-ChGr {
+    width: 8rem;
+  }
+
+  .title-contact {
+    display: none;
+  }
+
+  .img-icono {
+    display: block;
+    margin: 5px 0 10px 25px;
+    width: 60px;
+  }
+
+  .openIcon {
+    margin-left: 146px;
+  }
+}
+
 /* -- VISTA CHAT GRUPAL (Chat grupal) -- */
 
 .chatGrupal {
-  /* display: flex; */
+  display: flex;
   background: #855065;
   min-width: 200px;
   height: 100vh;
-  width: 100vh;
+  width: 100%;
+  flex-direction: column;
 }
 
 .nav-chatGrupal {
-  /* display: flex;
-  justify-content: center; */
+  display: flex;
+  background: #dcb6c6;
+  padding: 8px;
+  box-shadow: -1px 7px 12px 6px rgba(0, 0, 0, 0.1);
+}
+
+.title-chatGrupal {
+  color: #855065;
+  margin-left: 54px;
+  margin-top: 8px;
+}
+
+.back {
+  /* margin-left: -150px; */
+}
+
+.chatG-historial {
+  margin: 10px 10px 0 10px;
+  overflow-y: auto;
+  padding: 6rem;
+  height: 40%;
+}
+
+.window-chat {
+  display: flex;
+  /* height: 100%; */
+  border-radius: 0 0 1rem 1rem;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  margin-top: 10px;
+}
+
+.GrupalSend {
+  margin-bottom: 40px;
+  background-color: #bb166287;
 }
