--- a/src/styles.css
+++ b/src/styles.css
@@ -104,7 +104,7 @@ nav {
 }
 
 .navBtn {
-  padding: 0.5rem 2rem;
+  padding: 1rem 1.1rem;
   font-size: 1rem;
   color: #bb1662;
   background-color: snow;
@@ -112,6 +112,7 @@ nav {
   border: none;
   font-weight: 500;
   transition: all 0.5s ease-in-out;
+  border-radius: 10%;
 }
 
 .navBtn:hover {
@@ -134,6 +135,19 @@ nav {
 
 .nav_close {
   transform: var(--state-close);
+}
+
+.navbar-gifKey {
+  width: 51px;
+  height: auto;
+  border-radius: 10% 50% 50% 10%;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.navbar-gifKey:hover {
+  font-weight: 500;
+  background-color: #c23071;
+  color: snow;
 }
 
 /*----------- HOME---------- */
@@ -572,7 +586,6 @@ footer {
   background-color: var(--color-fondo);
   justify-content: space-between;
   overflow: scroll;
-
 }
 
 .list-ChGr {
@@ -642,24 +655,23 @@ footer {
   opacity: 0.7;
   font-weight: normal;
 }
- /* -- HISTORIA CHATTTTTTTTTTTTTTTTT -- */
- .response{
+/* -- HISTORIA CHATTTTTTTTTTTTTTTTT -- */
+.response {
   color: snow;
- }
-#inactive{
+}
+#inactive {
   display: none;
 }
- .message-data {
+.message-data {
   margin-bottom: 15px;
   color: rgb(0, 0, 0);
-
 }
 
 .message-data-time {
   color: lighten(gray 8%);
   padding-left: 6px;
 }
-.message {      
+.message {
   color: white;
   padding: 18px 20px;
   line-height: 26px;
@@ -667,9 +679,8 @@ footer {
   border-radius: 7px;
   margin-bottom: 30px;
   width: 90%;
-
 }
-.message-data-name{
+.message-data-name {
   color: snow;
 }
 .message:after {
@@ -692,15 +703,12 @@ footer {
 
 .other-message {
   background: rgb(219, 219, 255);
-  
+
   &:after {
     border-bottom-color: blue;
     left: 93%;
   }
 }
-
-
-
 
 /* -- VISTA CHAT GRUPAL (Chat grupal) -- */
 
@@ -795,7 +803,7 @@ footer {
   }
 }
 
-@media screen  and (min-width:1000px) and (max-width: 1980px){
+@media screen and (min-width: 600px) and (max-width: 1980px) {
   /* Tus estilos para pantallas entre 1000px y 1980px van aquí */
   body {
     width: 100%;
@@ -808,7 +816,6 @@ footer {
   .nav {
     --state-hamburguer: scale(0);
     --state-menu: translate(0);
-
   }
 
   .nav:target {
@@ -818,7 +825,7 @@ footer {
   .nav-item a {
     font-size: 1rem;
   }
-  .containerChat{
+  .containerChat {
     margin-top: 26px;
   }
   .contentHome {
@@ -829,7 +836,6 @@ footer {
     width: 100%;
     max-width: 42rem;
   }
-  
 }
 
 @media screen and (max-width: 600px) {
@@ -841,17 +847,18 @@ footer {
   .nav-link {
     background-color: #9a5c75;
     position: fixed;
-    top: 60px;
+    top: -150px;
     bottom: 0;
-    left: 0;
+    left: 15vh;
     right: 0;
-    padding: 0 5rem;
+    padding: 0;
     display: grid;
-    align-content: center;
-    justify-content: start;
+    justify-content: center;
     transform: var(--state-menu);
-    transition: 0.3s transform;
+    transition: 0.5s transformt;
     grid-auto-flow: row;
+    align-content: center;
+    justify-items: end;
   }
 
   .nav-item a {
@@ -923,4 +930,3 @@ footer {
     padding-top: 10%;
   }
 }
- 
