arreglar css de mensajes de error

--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,11 @@
 body {
   background: var(--color-gradient);
 }
+#messageError p ,#messageError p a {
+ width: 27rem;
+  color: snow;
 
+}
 .contentHome,
 .hero {
   width: 90%;
