--- a/src/styles.css
+++ b/src/styles.css
@@ -503,7 +503,7 @@ svg {
 
 #message-send {
   width: 80%;
-  height: 4rem;
+  height: 2rem;
   font-size: 1rem;
   padding: 1rem;
   border-radius: 2rem;
@@ -604,6 +604,9 @@ footer {
   flex-direction: column;
   align-items: flex-start;
   overflow-y: auto;
+  overflow-x: hidden;
+  scrollbar-color: rgba(227, 170, 185, 1) #9a5c75;
+  scrollbar-width: thin;
   box-shadow: 0px 4px 12px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -658,13 +661,13 @@ footer {
   font-weight: normal;
 }
 /* -- HISTORIA CHAT INDIVIDUAL -- */
-.response {
+/* .response {
   color: snow;
-}
-#inactive,
+} */
+/* #inactive,
 #inactive2 {
   display: none;
-}
+} */
 .message-data {
   display: flex;
   margin-bottom: 4px;
@@ -689,6 +692,7 @@ footer {
   border-radius: 8px;
   margin-bottom: 16px;
   width: 90%;
+  max-width: max-content;
 }
 .message-data-name {
   color: snow;
@@ -709,15 +713,15 @@ footer {
 
 .my-message {
   background: snow;
+  margin-left: auto;
 }
 
 .other-message {
   background: rgb(219, 219, 255);
-
-  &:after {
+  /* &:after {
     border-bottom-color: blue;
     left: 93%;
-  }
+  } */
 }
 
 .conteiner-you {
@@ -737,6 +741,16 @@ footer {
   scrollbar-color: rgba(227, 170, 185, 1) #9a5c75;
   scrollbar-width: thin;
   padding-right: 12px;
+}
+
+/* -- HISTORIA CHAT GRUPAL -- */
+
+/* #inactive {
+  display: none;
+} */
+
+.received-conteiner {
+  align-items: start;
 }
 
 /* -- VISTA CHAT GRUPAL (Chat grupal) -- */
@@ -766,6 +780,9 @@ footer {
 .chatG-historial {
   margin: 10px 10px 0 10px;
   overflow-y: auto;
+  overflow-x: hidden;
+  scrollbar-color: rgba(227, 170, 185, 1) #9a5c75;
+  scrollbar-width: thin;
   padding: 6rem;
   height: 40%;
 }
@@ -777,7 +794,7 @@ footer {
   flex-direction: row;
   justify-content: space-evenly;
   align-items: flex-end;
-  margin-top: 100px;
+  margin-top: 40px;
 }
 
 .GrupalSend {
